# Landmark-Detection-2

./: .gitignore  LICENSE  README.md  project.py  pyproject.toml  requirements.txt
src/landmark_detection/: __init__.py  cli.py  detector.py
