[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "landmark-detection"
version = "0.1.0"
description = "Detect face, hand, and pose landmarks from images or webcam video."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Vidya Singh" }
]
dependencies = [
  "mediapipe>=0.10.14",
  "opencv-python>=4.10.0.84",
  "numpy>=1.26.0"
]

[project.scripts]
landmark-detect = "landmark_detection.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
